# cmake_android_executable_template

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
